bynkc/tests/fixtures/negative/96_http_extra_param/src/svc.bynk
context svc

service api from http {
  on GET("/orders") (extra: String) -> Effect[HttpResult[String]] by v: Visitor {
    Ok("none")
  }
}
